// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <Networks /> without throwing 1`] = `
Array [
  .c3 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  color: rgba(73,73,73,1);
  line-height: 1.125rem;
  font-size: 0.8125rem;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c5 {
  background-color: rgb(216,216,216);
  margin: 0;
  height: 0.0625rem;
}

.c1 {
  margin-right: 0.375rem;
}

.c4 {
  margin-top: 0.375rem;
  margin-bottom: 2.625rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

<div
    className=""
    id={undefined}
    onClick={undefined}
>
    <div
        className="c0"
    >
        <div
            className="c1"
        >
            <div
                className="c2"
            >
                <svg
                    className=""
                    height="19.78"
                    innerRef={undefined}
                    style={
                        Object {
                            "transform": "rotate(0deg)",
                          }
                    }
                    viewBox="0 0 19.78 19.78"
                    width="19.78"
                    xmlns="http://www.w3.org/2000/svg"
                >
                    <path
                        d="M16.48,6.59a3.22,3.22,0,0,0-1.9.62l-2-2a3.22,3.22,0,0,0,.62-1.9,3.3,3.3,0,1,0-6.6,0,3.22,3.22,0,0,0,.62,1.9l-2,2a3.22,3.22,0,0,0-1.9-.62,3.3,3.3,0,0,0,0,6.6,3.22,3.22,0,0,0,1.9-.62l2,2a3.22,3.22,0,0,0-.62,1.9,3.3,3.3,0,1,0,6.6,0,3.22,3.22,0,0,0-.62-1.9l2-2a3.22,3.22,0,0,0,1.9.62,3.3,3.3,0,1,0,0-6.6Zm-6.59,6.3a3,3,0,0,0-1.73.56L6.33,11.62a3,3,0,0,0,0-3.46L8.16,6.33a3,3,0,0,0,3.46,0l1.83,1.83a3,3,0,0,0,0,3.46l-1.83,1.83A3,3,0,0,0,9.89,12.89Zm0-11.39A1.89,1.89,0,1,1,8,3.39,1.89,1.89,0,0,1,9.89,1.5ZM1.34,9.89a2,2,0,1,1,2,2A2,2,0,0,1,1.34,9.89Zm8.55,8.39a1.89,1.89,0,1,1,1.89-1.89A1.89,1.89,0,0,1,9.89,18.28Zm6.39-6.39a2,2,0,1,1,2-2A2,2,0,0,1,16.28,11.89Z"
                        fill="rgba(73, 73, 73, 1)"
                    />
                </svg>
            </div>
        </div>
        <small
            className="c3"
        >
            Networks
        </small>
    </div>
    <div
        className="c4"
    >
        <div
            className="c5 c6"
            height="0.0625rem"
        />
    </div>
</div>,
  <form />,
]
`;

exports[`renders <Networks loading /> without throwing 1`] = `
.c3 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  color: rgba(73,73,73,1);
  line-height: 1.125rem;
  font-size: 0.8125rem;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c5 {
  background-color: rgb(216,216,216);
  margin: 0;
  height: 0.0625rem;
}

.c1 {
  margin-right: 0.375rem;
}

.c4 {
  margin-top: 0.375rem;
  margin-bottom: 2.625rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

<div
  className=""
  id={undefined}
  onClick={undefined}
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <svg
          className=""
          height="19.78"
          innerRef={undefined}
          style={
            Object {
              "transform": "rotate(0deg)",
            }
          }
          viewBox="0 0 19.78 19.78"
          width="19.78"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.48,6.59a3.22,3.22,0,0,0-1.9.62l-2-2a3.22,3.22,0,0,0,.62-1.9,3.3,3.3,0,1,0-6.6,0,3.22,3.22,0,0,0,.62,1.9l-2,2a3.22,3.22,0,0,0-1.9-.62,3.3,3.3,0,0,0,0,6.6,3.22,3.22,0,0,0,1.9-.62l2,2a3.22,3.22,0,0,0-.62,1.9,3.3,3.3,0,1,0,6.6,0,3.22,3.22,0,0,0-.62-1.9l2-2a3.22,3.22,0,0,0,1.9.62,3.3,3.3,0,1,0,0-6.6Zm-6.59,6.3a3,3,0,0,0-1.73.56L6.33,11.62a3,3,0,0,0,0-3.46L8.16,6.33a3,3,0,0,0,3.46,0l1.83,1.83a3,3,0,0,0,0,3.46l-1.83,1.83A3,3,0,0,0,9.89,12.89Zm0-11.39A1.89,1.89,0,1,1,8,3.39,1.89,1.89,0,0,1,9.89,1.5ZM1.34,9.89a2,2,0,1,1,2,2A2,2,0,0,1,1.34,9.89Zm8.55,8.39a1.89,1.89,0,1,1,1.89-1.89A1.89,1.89,0,0,1,9.89,18.28Zm6.39-6.39a2,2,0,1,1,2-2A2,2,0,0,1,16.28,11.89Z"
            fill="rgba(73, 73, 73, 1)"
          />
        </svg>
      </div>
    </div>
    <small
      className="c3"
    >
      Networks
    </small>
  </div>
  <div
    className="c4"
  >
    <div
      className="c5 c6"
      height="0.0625rem"
    />
  </div>
</div>
`;

exports[`renders <Networks loading expanded /> without throwing 1`] = `
Array [
  .c3 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  color: rgba(73,73,73,1);
  line-height: 1.125rem;
  font-size: 0.8125rem;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c5 {
  background-color: rgb(216,216,216);
  margin: 0;
  height: 0.0625rem;
}

.c1 {
  margin-right: 0.375rem;
}

.c4 {
  margin-top: 0.375rem;
  margin-bottom: 1.125rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

<div
    className=""
    id={undefined}
    onClick={false}
>
    <div
        className="c0"
    >
        <div
            className="c1"
        >
            <div
                className="c2"
            >
                <svg
                    className=""
                    height="19.78"
                    innerRef={undefined}
                    style={
                        Object {
                            "transform": "rotate(0deg)",
                          }
                    }
                    viewBox="0 0 19.78 19.78"
                    width="19.78"
                    xmlns="http://www.w3.org/2000/svg"
                >
                    <path
                        d="M16.48,6.59a3.22,3.22,0,0,0-1.9.62l-2-2a3.22,3.22,0,0,0,.62-1.9,3.3,3.3,0,1,0-6.6,0,3.22,3.22,0,0,0,.62,1.9l-2,2a3.22,3.22,0,0,0-1.9-.62,3.3,3.3,0,0,0,0,6.6,3.22,3.22,0,0,0,1.9-.62l2,2a3.22,3.22,0,0,0-.62,1.9,3.3,3.3,0,1,0,6.6,0,3.22,3.22,0,0,0-.62-1.9l2-2a3.22,3.22,0,0,0,1.9.62,3.3,3.3,0,1,0,0-6.6Zm-6.59,6.3a3,3,0,0,0-1.73.56L6.33,11.62a3,3,0,0,0,0-3.46L8.16,6.33a3,3,0,0,0,3.46,0l1.83,1.83a3,3,0,0,0,0,3.46l-1.83,1.83A3,3,0,0,0,9.89,12.89Zm0-11.39A1.89,1.89,0,1,1,8,3.39,1.89,1.89,0,0,1,9.89,1.5ZM1.34,9.89a2,2,0,1,1,2,2A2,2,0,0,1,1.34,9.89Zm8.55,8.39a1.89,1.89,0,1,1,1.89-1.89A1.89,1.89,0,0,1,9.89,18.28Zm6.39-6.39a2,2,0,1,1,2-2A2,2,0,0,1,16.28,11.89Z"
                        fill="rgba(73, 73, 73, 1)"
                    />
                </svg>
            </div>
        </div>
        <small
            className="c3"
        >
            Networks
        </small>
    </div>
    <div
        className="c4"
    >
        <div
            className="c5 c6"
            height="0.0625rem"
        />
    </div>
</div>,
  .c3 {
  color: rgba(73,73,73,1);
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c3 + p,
.c3 + small,
.c3 + h1,
.c3 + h2,
.c3 + label,
.c3 + h3,
.c3 + h4,
.c3 + h5,
.c3 + div,
.c3 + span {
  padding-bottom: 2.25rem;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c2 {
  margin-bottom: 1.125rem;
}

@media only screen and (min-width:0em) {
  .c1 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c1 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

<div
    className="c0"
>
    <div
        className="c1"
    >
        <div
            className="c2"
        >
            <p
                className="c3"
            >
                Instances are automatically connected to a private fabric network, which is the best choice for internal communication within your application. Data center networks are the best choice for exposing your application to the public internet (if the data center network is a public network).
                 
                <a
                    href="https://docs.joyent.com/public-cloud/network/sdn"
                    rel="noopener noreferrer"
                    target="__blank"
                >
                    Read more
                </a>
            </p>
        </div>
    </div>
</div>,
  .c1 {
  fill: rgb(59,70,204);
  stroke: rgb(59,70,204);
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
}

.c2 {
  fill: rgb(59,70,204);
  stroke: rgb(59,70,204);
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
  -webkit-animation-delay: 0.5s;
  animation-delay: 0.5s;
}

.c3 {
  fill: rgb(59,70,204);
  stroke: rgb(59,70,204);
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
  -webkit-animation-delay: 1s;
  animation-delay: 1s;
}

.c4 {
  color: rgba(73,73,73,1);
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  text-align: center;
  margin-bottom: 0;
  margin-left: 0.375rem;
}

.c4 + p,
.c4 + small,
.c4 + h1,
.c4 + h2,
.c4 + label,
.c4 + h3,
.c4 + h4,
.c4 + h5,
.c4 + div,
.c4 + span {
  padding-bottom: 2.25rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 1.25rem;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

<div
    className="c0"
>
    <svg
        height="10"
        width="28"
    >
        <rect
            className="c1"
            height="6"
            width="6"
            x="2"
            y="2"
        />
        <rect
            className="c2"
            height="6"
            width="6"
            x="11"
            y="2"
        />
        <rect
            className="c3"
            height="6"
            width="6"
            x="20"
            y="2"
        />
    </svg>
    <p
        className="c4"
    >
        Loading...
    </p>
</div>,
]
`;

exports[`renders <Networks networks=[] /> without throwing 1`] = `
Array [
  .c3 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  color: rgba(73,73,73,1);
  line-height: 1.125rem;
  font-size: 0.8125rem;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c5 {
  background-color: rgb(216,216,216);
  margin: 0;
  height: 0.0625rem;
}

.c1 {
  margin-right: 0.375rem;
}

.c4 {
  margin-top: 0.375rem;
  margin-bottom: 2.625rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

<div
    className=""
    id={undefined}
    onClick={undefined}
>
    <div
        className="c0"
    >
        <div
            className="c1"
        >
            <div
                className="c2"
            >
                <svg
                    className=""
                    height="19.78"
                    innerRef={undefined}
                    style={
                        Object {
                            "transform": "rotate(0deg)",
                          }
                    }
                    viewBox="0 0 19.78 19.78"
                    width="19.78"
                    xmlns="http://www.w3.org/2000/svg"
                >
                    <path
                        d="M16.48,6.59a3.22,3.22,0,0,0-1.9.62l-2-2a3.22,3.22,0,0,0,.62-1.9,3.3,3.3,0,1,0-6.6,0,3.22,3.22,0,0,0,.62,1.9l-2,2a3.22,3.22,0,0,0-1.9-.62,3.3,3.3,0,0,0,0,6.6,3.22,3.22,0,0,0,1.9-.62l2,2a3.22,3.22,0,0,0-.62,1.9,3.3,3.3,0,1,0,6.6,0,3.22,3.22,0,0,0-.62-1.9l2-2a3.22,3.22,0,0,0,1.9.62,3.3,3.3,0,1,0,0-6.6Zm-6.59,6.3a3,3,0,0,0-1.73.56L6.33,11.62a3,3,0,0,0,0-3.46L8.16,6.33a3,3,0,0,0,3.46,0l1.83,1.83a3,3,0,0,0,0,3.46l-1.83,1.83A3,3,0,0,0,9.89,12.89Zm0-11.39A1.89,1.89,0,1,1,8,3.39,1.89,1.89,0,0,1,9.89,1.5ZM1.34,9.89a2,2,0,1,1,2,2A2,2,0,0,1,1.34,9.89Zm8.55,8.39a1.89,1.89,0,1,1,1.89-1.89A1.89,1.89,0,0,1,9.89,18.28Zm6.39-6.39a2,2,0,1,1,2-2A2,2,0,0,1,16.28,11.89Z"
                        fill="rgba(73, 73, 73, 1)"
                    />
                </svg>
            </div>
        </div>
        <small
            className="c3"
        >
            Networks
        </small>
    </div>
    <div
        className="c4"
    >
        <div
            className="c5 c6"
            height="0.0625rem"
        />
    </div>
</div>,
  <form />,
]
`;

exports[`renders <Networks networks=[] expanded /> without throwing 1`] = `
Array [
  .c3 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  color: rgba(73,73,73,1);
  line-height: 1.125rem;
  font-size: 0.8125rem;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c5 {
  background-color: rgb(216,216,216);
  margin: 0;
  height: 0.0625rem;
}

.c1 {
  margin-right: 0.375rem;
}

.c4 {
  margin-top: 0.375rem;
  margin-bottom: 1.125rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

<div
    className=""
    id={undefined}
    onClick={false}
>
    <div
        className="c0"
    >
        <div
            className="c1"
        >
            <div
                className="c2"
            >
                <svg
                    className=""
                    height="19.78"
                    innerRef={undefined}
                    style={
                        Object {
                            "transform": "rotate(0deg)",
                          }
                    }
                    viewBox="0 0 19.78 19.78"
                    width="19.78"
                    xmlns="http://www.w3.org/2000/svg"
                >
                    <path
                        d="M16.48,6.59a3.22,3.22,0,0,0-1.9.62l-2-2a3.22,3.22,0,0,0,.62-1.9,3.3,3.3,0,1,0-6.6,0,3.22,3.22,0,0,0,.62,1.9l-2,2a3.22,3.22,0,0,0-1.9-.62,3.3,3.3,0,0,0,0,6.6,3.22,3.22,0,0,0,1.9-.62l2,2a3.22,3.22,0,0,0-.62,1.9,3.3,3.3,0,1,0,6.6,0,3.22,3.22,0,0,0-.62-1.9l2-2a3.22,3.22,0,0,0,1.9.62,3.3,3.3,0,1,0,0-6.6Zm-6.59,6.3a3,3,0,0,0-1.73.56L6.33,11.62a3,3,0,0,0,0-3.46L8.16,6.33a3,3,0,0,0,3.46,0l1.83,1.83a3,3,0,0,0,0,3.46l-1.83,1.83A3,3,0,0,0,9.89,12.89Zm0-11.39A1.89,1.89,0,1,1,8,3.39,1.89,1.89,0,0,1,9.89,1.5ZM1.34,9.89a2,2,0,1,1,2,2A2,2,0,0,1,1.34,9.89Zm8.55,8.39a1.89,1.89,0,1,1,1.89-1.89A1.89,1.89,0,0,1,9.89,18.28Zm6.39-6.39a2,2,0,1,1,2-2A2,2,0,0,1,16.28,11.89Z"
                        fill="rgba(73, 73, 73, 1)"
                    />
                </svg>
            </div>
        </div>
        <small
            className="c3"
        >
            Networks
        </small>
    </div>
    <div
        className="c4"
    >
        <div
            className="c5 c6"
            height="0.0625rem"
        />
    </div>
</div>,
  .c3 {
  color: rgba(73,73,73,1);
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c3 + p,
.c3 + small,
.c3 + h1,
.c3 + h2,
.c3 + label,
.c3 + h3,
.c3 + h4,
.c3 + h5,
.c3 + div,
.c3 + span {
  padding-bottom: 2.25rem;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c2 {
  margin-bottom: 1.125rem;
}

@media only screen and (min-width:0em) {
  .c1 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c1 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

<div
    className="c0"
>
    <div
        className="c1"
    >
        <div
            className="c2"
        >
            <p
                className="c3"
            >
                Instances are automatically connected to a private fabric network, which is the best choice for internal communication within your application. Data center networks are the best choice for exposing your application to the public internet (if the data center network is a public network).
                 
                <a
                    href="https://docs.joyent.com/public-cloud/network/sdn"
                    rel="noopener noreferrer"
                    target="__blank"
                >
                    Read more
                </a>
            </p>
        </div>
    </div>
</div>,
  .c9 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  display: none;
}

.c9[type='checkbox'],
.c9[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

.c9[type='number']::-webkit-inner-spin-button,
.c9[type='number']::-webkit-outer-spin-button {
  height: auto;
}

.c9[type='search'] {
  -webkit-appearance: textfield;
  -moz-appearance: textfield;
  appearance: textfield;
  outline-offset: -0.125rem;
}

.c9[type='search']::-webkit-search-cancel-button,
.c9[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9::-webkit-file-upload-button {
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  font: inherit;
}

.c9:checked + label::after {
  opacity: 1;
}

.c9:selected + label::after {
  opacity: 1;
}

.c9:checked + label {
  border-color: rgb(59,70,204);
}

.c9:selected + label {
  border-color: rgb(59,70,204);
}

.c9:disabled + label {
  background-color: rgb(249,249,249);
  cursor: not-allowed;
}

.c16 {
  color: rgba(73,73,73,1);
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c16 + p,
.c16 + small,
.c16 + h1,
.c16 + h2,
.c16 + label,
.c16 + h3,
.c16 + h4,
.c16 + h5,
.c16 + div,
.c16 + span {
  padding-bottom: 2.25rem;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c12 {
  color: rgba(73,73,73,1);
  font-weight: 600;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c12 + p,
.c12 + small,
.c12 + h1,
.c12 + h2,
.c12 + label,
.c12 + h3,
.c12 + h4,
.c12 + h5,
.c12 + div,
.c12 + span {
  margin-top: 0.75rem;
}

.c30 {
  color: rgba(73,73,73,1);
  font-weight: 600;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
  -webkit-text-fill-color: currentcolor;
  color: rgb(255,255,255);
}

.c30 + p,
.c30 + small,
.c30 + h1,
.c30 + h2,
.c30 + label,
.c30 + h3,
.c30 + h4,
.c30 + h5,
.c30 + div,
.c30 + span {
  margin-top: 0.75rem;
}

.c3 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  box-shadow: 0 0.125rem 0 0 rgba(0,0,0,0.05);
}

.c4 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  z-index: 1;
  line-height: 1.5rem;
  height: auto;
  max-width: 100%;
  margin: -0.0625rem -0.0625rem 0 -0.0625rem;
}

.c4 button {
  margin-bottom: 0;
  margin-top: 0;
}

.c5 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
  width: 2.875rem;
  min-width: 2.875rem;
  min-height: 2.875rem;
  max-width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border-width: 0;
  border-radius: 0;
  box-shadow: none;
}

.c11 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
  box-sizing: border-box;
  min-height: 2.9375rem;
  max-width: 100%;
  width: auto;
  height: auto;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  overflow: hidden;
  background-color: transparent;
  border-width: 0;
  box-shadow: none;
  color: inherit;
}

.c13 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-width: 0;
  margin-bottom: 0;
  background-color: transparent;
}

.c13 > [name='card']:not(:last-child) {
  margin-bottom: 0.8125rem;
}

.c13 > [name='card']:last-child {
  margin-bottom: 0.4375rem;
}

.c23 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  cursor: pointer;
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
}

.c24 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  cursor: pointer;
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  z-index: 1;
  line-height: 1.5rem;
  height: auto;
  max-width: 100%;
  margin: -0.0625rem -0.0625rem 0 -0.0625rem;
  margin: -0.0625rem;
  box-shadow: none;
}

.c24 button {
  margin-bottom: 0;
  margin-top: 0;
}

.c25 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  cursor: pointer;
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
  box-sizing: border-box;
  min-height: 2.9375rem;
  max-width: 100%;
  width: auto;
  height: auto;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  overflow: hidden;
  background-color: transparent;
  border-width: 0;
  box-shadow: none;
  color: inherit;
}

.c27 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  color: rgb(255,255,255);
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  z-index: 1;
  line-height: 1.5rem;
  height: auto;
  max-width: 100%;
  margin: -0.0625rem -0.0625rem 0 -0.0625rem;
}

.c27 button {
  margin-bottom: 0;
  margin-top: 0;
}

.c28 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  color: rgb(255,255,255);
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
  width: 2.875rem;
  min-width: 2.875rem;
  min-height: 2.875rem;
  max-width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border-width: 0;
  border-radius: 0;
  box-shadow: none;
}

.c29 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  color: rgb(255,255,255);
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
  box-sizing: border-box;
  min-height: 2.9375rem;
  max-width: 100%;
  width: auto;
  height: auto;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  overflow: hidden;
  background-color: transparent;
  border-width: 0;
  box-shadow: none;
  color: inherit;
}

.c10 {
  color: rgb(100,100,100);
  position: absolute;
  width: 1.125rem;
  height: 1.125rem;
  box-sizing: border-box;
  top: 0;
  right: 0;
  cursor: pointer;
  background-color: rgb(255,255,255);
  box-shadow: none;
  border: 0.0625rem solid rgb(216,216,216);
  cursor: pointer;
  border-radius: 0.25rem;
  width: 1.125rem;
  height: 1.125rem;
}

.c10::after {
  opacity: 0;
  content: '';
  position: absolute;
  width: 0.375rem;
  height: 0.125rem;
  background: transparent;
  top: 0.3125rem;
  left: 0.25rem;
  border: 0.125rem solid rgb(45,45,45);
  border-top: none;
  border-right: none;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

.c8 {
  display: inline-block;
  vertical-align: text-bottom;
  width: 1.125rem;
  height: 1.125rem;
  position: relative;
  cursor: pointer;
}

.c7 {
  list-style-type: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 label {
  font-weight: 400;
}

.c6 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c19 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  display: block;
}

.c21 {
  margin-right: 0.375rem;
}

.c15 {
  margin-bottom: 1.125rem;
}

.c2 {
  margin-bottom: 1.5rem;
}

.c18 {
  margin-right: 1.5rem;
}

.c22 {
  margin-top: 1.125rem;
}

.c14 {
  padding: 1.5rem;
}

.c26 {
  padding-right: 1.125rem;
  padding-left: 1.125rem;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media only screen and (min-width:0em) {
  .c1 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c1 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

<form>
    <div
        className="c0"
    >
        <div
            className="c1"
        >
            <div
                className="c2"
            >
                <div
                    className="c3"
                    disabled={false}
                    name="card"
                >
                    <div
                        className="c4"
                        disabled={false}
                        name="card-header"
                    >
                        <div
                            className="c5"
                            disabled={false}
                            name="card-header-box"
                        >
                            <div
                                className="baseline-jVaZNU kXgQxt c6"
                                name="1"
                                role="group"
                                style={undefined}
                            >
                                <li
                                    className="c7"
                                >
                                    <div
                                        checked={false}
                                        className="c8"
                                        disabled={false}
                                        id="k"
                                        onBlur={undefined}
                                        type="checkbox"
                                    >
                                        <input
                                            checked={false}
                                            className="c9"
                                            disabled={false}
                                            id="l"
                                            onBlur={undefined}
                                            type="checkbox"
                                        />
                                        <label
                                            className="c10"
                                            htmlFor="l"
                                        />
                                    </div>
                                </li>
                            </div>
                        </div>
                        <div
                            className="c11"
                            disabled={false}
                            name="card-header-meta"
                        >
                            <h4
                                className="c12"
                            >
                                name
                            </h4>
                        </div>
                    </div>
                    <div
                        className="c13"
                        name="card-outlet"
                    >
                        <div
                            className="c14"
                        >
                            <div
                                className="c15"
                            >
                                <p
                                    className="c16"
                                >
                                    description
                                </p>
                            </div>
                            <div
                                className="c17"
                            >
                                <div
                                    className="c18"
                                >
                                    <div
                                        className="c19"
                                    >
                                        <div
                                            className="c20"
                                        >
                                            <div
                                                className="c19"
                                            >
                                                <div
                                                    className="c21"
                                                >
                                                    <svg
                                                        className=""
                                                        height="16"
                                                        innerRef={undefined}
                                                        style={
                                                            Object {
                                                                "transform": "rotate(0deg)",
                                                              }
                                                        }
                                                        viewBox="0 0 12 16"
                                                        width="12"
                                                        xmlns="http://www.w3.org/2000/svg"
                                                    >
                                                        <path
                                                            d="M10,6V4A4,4,0,0,0,2,4V6H2A2,2,0,0,0,0,8v6a2,2,0,0,0,2,2h8a2,2,0,0,0,2-2V8A2,2,0,0,0,10,6ZM4,4c0-1.65.35-2,2-2s2,.35,2,2V6H4Zm6,9a1,1,0,0,1-1,1H3a1,1,0,0,1-1-1V9A1,1,0,0,1,3,8H9a1,1,0,0,1,1,1ZM6,13H6a1,1,0,0,1-1-1V10A1,1,0,0,1,6,9H6a1,1,0,0,1,1,1v2A1,1,0,0,1,6,13Z"
                                                            fill="rgba(73, 73, 73, 1)"
                                                        />
                                                    </svg>
                                                </div>
                                            </div>
                                            <div
                                                className="c19"
                                            >
                                                <p
                                                    className="c16"
                                                >
                                                    Private
                                                </p>
                                            </div>
                                        </div>
                                    </div>
                                </div>
                                <div
                                    className="c18"
                                >
                                    <div
                                        className="c19"
                                    >
                                        <div
                                            className="c20"
                                        >
                                            <div
                                                className="c19"
                                            >
                                                <div
                                                    className="c21"
                                                >
                                                    <svg
                                                        height="16.2"
                                                        viewBox="0 0 16.2 16.2"
                                                        width="16.2"
                                                        xmlns="http://www.w3.org/2000/svg"
                                                    >
                                                        <path
                                                            d="M16.2,6.61a17.42,17.42,0,0,0-3.37-.26,11.67,11.67,0,0,1-.47-4A15.72,15.72,0,0,1,16,2.59l.2-1a16,16,0,0,0-3.77-.24A11,11,0,0,1,12.59.2l-1-.2a14.09,14.09,0,0,0-.2,1.46A8.44,8.44,0,0,0,7.82,2.68c-.15.1-.31.19-.47.28A15.07,15.07,0,0,1,7.59.2l-1-.2a16.37,16.37,0,0,0-.26,3.37,11.66,11.66,0,0,1-4,.46A15.6,15.6,0,0,1,2.59.2l-1-.2a16.29,16.29,0,0,0-.25,3.77C.67,3.7.21,3.61.2,3.61l-.2,1c.07,0,.63.12,1.46.19a8.48,8.48,0,0,0,1.22,3.6A5.3,5.3,0,0,1,3,8.85,17.52,17.52,0,0,1,.2,8.61l-.2,1a16.66,16.66,0,0,0,3,.26h.4a11.71,11.71,0,0,1,.46,4A17,17,0,0,1,.2,13.61l-.2,1a16.66,16.66,0,0,0,3,.26l.8,0c-.07.7-.16,1.16-.16,1.17l1,.2c0-.07.12-.63.19-1.46a8.49,8.49,0,0,0,3.6-1.23c.15-.1.3-.18.46-.27A16.88,16.88,0,0,1,8.61,16l1,.2a17,17,0,0,0,.25-3.37,11.73,11.73,0,0,1,4-.47A17.13,17.13,0,0,1,13.61,16l1,.2a17.28,17.28,0,0,0,.24-3.77,11,11,0,0,1,1.17.16l.2-1a14.09,14.09,0,0,0-1.46-.2,8.45,8.45,0,0,0-1.23-3.59c-.1-.15-.18-.31-.27-.47A15.07,15.07,0,0,1,16,7.59ZM8.38,3.51a7.26,7.26,0,0,1,3-1,13.17,13.17,0,0,0,.44,3.93,9.35,9.35,0,0,0-3.51,1A8.4,8.4,0,0,1,7.39,4,6.75,6.75,0,0,0,8.38,3.51ZM2.48,4.84H3a12.4,12.4,0,0,0,3.44-.44,9.35,9.35,0,0,0,1,3.51A8.38,8.38,0,0,1,4,8.8a6.18,6.18,0,0,0-.53-1A7.36,7.36,0,0,1,2.48,4.84Zm5.34,7.84a7.22,7.22,0,0,1-3,1A12.61,12.61,0,0,0,4.4,9.78a9,9,0,0,0,3.52-1,8.43,8.43,0,0,1,.88,3.37A7.11,7.11,0,0,0,7.82,12.68Zm5.9-1.33a13.23,13.23,0,0,0-3.94.44,9,9,0,0,0-1-3.51,8.44,8.44,0,0,1,3.38-.89,6.69,6.69,0,0,0,.52,1A7.13,7.13,0,0,1,13.72,11.35Z"
                                                            fill="rgba(73, 73, 73, 1)"
                                                        />
                                                    </svg>
                                                </div>
                                            </div>
                                            <div
                                                className="c19"
                                            >
                                                <p
                                                    className="c16"
                                                >
                                                    Fabric network
                                                </p>
                                            </div>
                                        </div>
                                    </div>
                                </div>
                            </div>
                            <div
                                className="c22"
                            >
                                <div
                                    className="c23"
                                    disabled={false}
                                    name="card"
                                >
                                    <div
                                        className="c24"
                                        disabled={false}
                                        name="card-header"
                                        onClick={[Function]}
                                    >
                                        <div
                                            className="c25"
                                            disabled={false}
                                            name="card-header-meta"
                                        >
                                            <div
                                                className="c26"
                                            >
                                                <p
                                                    className="c16"
                                                >
                                                    Network information
                                                </p>
                                            </div>
                                        </div>
                                        <div
                                            className="c5"
                                            disabled={false}
                                            name="card-header-box"
                                        >
                                            <svg
                                                className=""
                                                height="6"
                                                innerRef={undefined}
                                                style={
                                                    Object {
                                                        "transform": "rotate(0deg)",
                                                      }
                                                }
                                                viewBox="0 0 9.6 6"
                                                width="9.6"
                                                xmlns="http://www.w3.org/2000/svg"
                                            >
                                                <path
                                                    d="M9.6,1.12,8.24,0,4.8,3.5,1.36,0,0,1.12,4.8,6Z"
                                                    fill="rgba(73, 73, 73, 1)"
                                                />
                                            </svg>
                                        </div>
                                    </div>
                                </div>
                            </div>
                        </div>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div
        className="c0"
    >
        <div
            className="c1"
        >
            <div
                className="c2"
            >
                <div
                    className="c3"
                    disabled={false}
                    name="card"
                >
                    <div
                        className="c27"
                        disabled={false}
                        name="card-header"
                    >
                        <div
                            className="c28"
                            disabled={false}
                            name="card-header-box"
                        >
                            <div
                                className="baseline-jVaZNU kXgQxt c6"
                                name="2"
                                role="group"
                                style={undefined}
                            >
                                <li
                                    className="c7"
                                >
                                    <div
                                        checked={true}
                                        className="c8"
                                        disabled={false}
                                        id="m"
                                        onBlur={undefined}
                                        type="checkbox"
                                    >
                                        <input
                                            checked={true}
                                            className="c9"
                                            disabled={false}
                                            id="n"
                                            onBlur={undefined}
                                            type="checkbox"
                                        />
                                        <label
                                            className="c10"
                                            htmlFor="n"
                                        />
                                    </div>
                                </li>
                            </div>
                        </div>
                        <div
                            className="c29"
                            disabled={false}
                            name="card-header-meta"
                        >
                            <h4
                                className="c30"
                            >
                                name2
                            </h4>
                        </div>
                    </div>
                    <div
                        className="c13"
                        name="card-outlet"
                    >
                        <div
                            className="c14"
                        >
                            <div
                                className="c15"
                            >
                                <p
                                    className="c16"
                                >
                                    description2
                                </p>
                            </div>
                            <div
                                className="c17"
                            >
                                <div
                                    className="c18"
                                >
                                    <div
                                        className="c19"
                                    >
                                        <div
                                            className="c20"
                                        >
                                            <div
                                                className="c19"
                                            >
                                                <div
                                                    className="c21"
                                                >
                                                    <svg
                                                        className=""
                                                        height="16"
                                                        innerRef={undefined}
                                                        style={
                                                            Object {
                                                                "transform": "rotate(0deg)",
                                                              }
                                                        }
                                                        viewBox="0 0 12 16"
                                                        width="12"
                                                        xmlns="http://www.w3.org/2000/svg"
                                                    >
                                                        <path
                                                            d="M10,6V4A4,4,0,0,0,2,4V6H2A2,2,0,0,0,0,8v6a2,2,0,0,0,2,2h8a2,2,0,0,0,2-2V8A2,2,0,0,0,10,6ZM4,4c0-1.65.35-2,2-2s2,.35,2,2V6H4Zm6,9a1,1,0,0,1-1,1H3a1,1,0,0,1-1-1V9A1,1,0,0,1,3,8H9a1,1,0,0,1,1,1ZM6,13H6a1,1,0,0,1-1-1V10A1,1,0,0,1,6,9H6a1,1,0,0,1,1,1v2A1,1,0,0,1,6,13Z"
                                                            fill="rgba(73, 73, 73, 1)"
                                                        />
                                                    </svg>
                                                </div>
                                            </div>
                                            <div
                                                className="c19"
                                            >
                                                <p
                                                    className="c16"
                                                >
                                                    Private
                                                </p>
                                            </div>
                                        </div>
                                    </div>
                                </div>
                                <div
                                    className="c18"
                                >
                                    <div
                                        className="c19"
                                    >
                                        <div
                                            className="c20"
                                        >
                                            <div
                                                className="c19"
                                            >
                                                <div
                                                    className="c21"
                                                >
                                                    <svg
                                                        height="13"
                                                        viewBox="0 0 9 13"
                                                        width="9"
                                                        xmlns="http://www.w3.org/2000/svg"
                                                    >
                                                        <path
                                                            d="M0,0V13H9V0ZM7,11H2V2H7ZM3,4H6V3H3ZM3,6H6V5H3ZM3,8H6V7H3Z"
                                                            fill="rgba(73, 73, 73, 1)"
                                                        />
                                                    </svg>
                                                </div>
                                            </div>
                                            <div
                                                className="c19"
                                            >
                                                <p
                                                    className="c16"
                                                >
                                                    Data center network
                                                </p>
                                            </div>
                                        </div>
                                    </div>
                                </div>
                            </div>
                        </div>
                    </div>
                </div>
            </div>
        </div>
    </div>
</form>,
  .c3 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c3 + button {
  margin-left: 0.375rem;
}

.c2 {
  display: inline-block;
}

.c1 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
}

.c1:focus {
  outline: 0;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c1:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c1:active,
.c1:active:hover,
.c1:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c1[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  margin-bottom: 2.625rem;
}

<div
    className="c0"
>
    <button
        className="c1 c2 c3"
        href=""
        onClick={undefined}
        type="button"
    >
        Next
    </button>
</div>,
]
`;

exports[`renders <Networks networks=[] proceeded /> without throwing 1`] = `
Array [
  .c3 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  color: rgba(73,73,73,1);
  line-height: 1.125rem;
  font-size: 0.8125rem;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c5 {
  background-color: rgb(216,216,216);
  margin: 0;
  height: 0.0625rem;
}

.c1 {
  margin-right: 0.375rem;
}

.c4 {
  margin-top: 0.375rem;
  margin-bottom: 1.125rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

<div
    className=""
    id={undefined}
    onClick={false}
>
    <div
        className="c0"
    >
        <div
            className="c1"
        >
            <div
                className="c2"
            >
                <svg
                    className=""
                    height="19.78"
                    innerRef={undefined}
                    style={
                        Object {
                            "transform": "rotate(0deg)",
                          }
                    }
                    viewBox="0 0 19.78 19.78"
                    width="19.78"
                    xmlns="http://www.w3.org/2000/svg"
                >
                    <path
                        d="M16.48,6.59a3.22,3.22,0,0,0-1.9.62l-2-2a3.22,3.22,0,0,0,.62-1.9,3.3,3.3,0,1,0-6.6,0,3.22,3.22,0,0,0,.62,1.9l-2,2a3.22,3.22,0,0,0-1.9-.62,3.3,3.3,0,0,0,0,6.6,3.22,3.22,0,0,0,1.9-.62l2,2a3.22,3.22,0,0,0-.62,1.9,3.3,3.3,0,1,0,6.6,0,3.22,3.22,0,0,0-.62-1.9l2-2a3.22,3.22,0,0,0,1.9.62,3.3,3.3,0,1,0,0-6.6Zm-6.59,6.3a3,3,0,0,0-1.73.56L6.33,11.62a3,3,0,0,0,0-3.46L8.16,6.33a3,3,0,0,0,3.46,0l1.83,1.83a3,3,0,0,0,0,3.46l-1.83,1.83A3,3,0,0,0,9.89,12.89Zm0-11.39A1.89,1.89,0,1,1,8,3.39,1.89,1.89,0,0,1,9.89,1.5ZM1.34,9.89a2,2,0,1,1,2,2A2,2,0,0,1,1.34,9.89Zm8.55,8.39a1.89,1.89,0,1,1,1.89-1.89A1.89,1.89,0,0,1,9.89,18.28Zm6.39-6.39a2,2,0,1,1,2-2A2,2,0,0,1,16.28,11.89Z"
                        fill="rgba(73, 73, 73, 1)"
                    />
                </svg>
            </div>
        </div>
        <small
            className="c3"
        >
            Networks
        </small>
    </div>
    <div
        className="c4"
    >
        <div
            className="c5 c6"
            height="0.0625rem"
        />
    </div>
</div>,
  .c0 {
  color: rgba(73,73,73,1);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
  margin: 0;
}

.c0 + p,
.c0 + small,
.c0 + h1,
.c0 + h2,
.c0 + label,
.c0 + h3,
.c0 + h4,
.c0 + h5,
.c0 + div,
.c0 + span {
  margin-top: 1.5rem;
}

<h3
    className="c0"
>
    0
     network
    s
     added
</h3>,
  .c7 {
  color: rgba(73,73,73,1);
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c7 + p,
.c7 + small,
.c7 + h1,
.c7 + h2,
.c7 + label,
.c7 + h3,
.c7 + h4,
.c7 + h5,
.c7 + div,
.c7 + span {
  padding-bottom: 2.25rem;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c8 {
  background-color: rgb(216,216,216);
  margin: 0;
  height: 0.0625rem;
}

.c5 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  display: block;
}

.c12 {
  margin-right: 0.375rem;
}

.c10 {
  margin-right: 1.5rem;
}

.c2 {
  display: inline-block;
  margin-top: 1.125rem;
  margin-right: 1.125rem;
}

.c6 {
  margin-top: 0.75rem;
  margin-right: 1.125rem;
  margin-bottom: 0.75rem;
  margin-left: 1.125rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: inline-block;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  border-radius: 0.25rem;
  min-width: 18.75rem;
}

@media only screen and (min-width:0em) {
  .c1 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c1 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

<form>
    <div
        className="c0"
    >
        <div
            className="c1"
        >
            <div
                className="c2"
            >
                <div
                    className="c3"
                >
                    <div
                        className="c4"
                    >
                        <div
                            className="c5"
                        >
                            <div
                                className="c6"
                            >
                                <p
                                    className="c7"
                                >
                                    name2
                                </p>
                            </div>
                        </div>
                        <div
                            className="c5"
                        >
                            <div
                                className="c8 c0"
                                height="0.0625rem"
                            />
                        </div>
                        <div
                            className="c5"
                        >
                            <div
                                className="c6"
                            >
                                <div
                                    className="c9"
                                >
                                    <div
                                        className="c10"
                                    >
                                        <div
                                            className="c5"
                                        >
                                            <div
                                                className="c11"
                                            >
                                                <div
                                                    className="c5"
                                                >
                                                    <div
                                                        className="c12"
                                                    >
                                                        <svg
                                                            className=""
                                                            height="16"
                                                            innerRef={undefined}
                                                            style={
                                                                Object {
                                                                    "transform": "rotate(0deg)",
                                                                  }
                                                            }
                                                            viewBox="0 0 12 16"
                                                            width="12"
                                                            xmlns="http://www.w3.org/2000/svg"
                                                        >
                                                            <path
                                                                d="M10,6V4A4,4,0,0,0,2,4V6H2A2,2,0,0,0,0,8v6a2,2,0,0,0,2,2h8a2,2,0,0,0,2-2V8A2,2,0,0,0,10,6ZM4,4c0-1.65.35-2,2-2s2,.35,2,2V6H4Zm6,9a1,1,0,0,1-1,1H3a1,1,0,0,1-1-1V9A1,1,0,0,1,3,8H9a1,1,0,0,1,1,1ZM6,13H6a1,1,0,0,1-1-1V10A1,1,0,0,1,6,9H6a1,1,0,0,1,1,1v2A1,1,0,0,1,6,13Z"
                                                                fill="rgba(73, 73, 73, 1)"
                                                            />
                                                        </svg>
                                                    </div>
                                                </div>
                                                <div
                                                    className="c5"
                                                >
                                                    <p
                                                        className="c7"
                                                    >
                                                        Private
                                                    </p>
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <div
                                        className=""
                                    >
                                        <div
                                            className="c5"
                                        >
                                            <div
                                                className="c11"
                                            >
                                                <div
                                                    className="c5"
                                                >
                                                    <div
                                                        className="c12"
                                                    >
                                                        <svg
                                                            height="13"
                                                            viewBox="0 0 9 13"
                                                            width="9"
                                                            xmlns="http://www.w3.org/2000/svg"
                                                        >
                                                            <path
                                                                d="M0,0V13H9V0ZM7,11H2V2H7ZM3,4H6V3H3ZM3,6H6V5H3ZM3,8H6V7H3Z"
                                                                fill="rgba(73, 73, 73, 1)"
                                                            />
                                                        </svg>
                                                    </div>
                                                </div>
                                                <div
                                                    className="c5"
                                                >
                                                    <p
                                                        className="c7"
                                                    >
                                                        Data center network
                                                    </p>
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                </div>
                            </div>
                        </div>
                    </div>
                </div>
            </div>
        </div>
    </div>
</form>,
  .c3 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
}

.c3::-moz-focus-inner,
.c3[type='button']::-moz-focus-inner,
.c3[type='reset']::-moz-focus-inner,
.c3[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c3:-moz-focusring,
.c3[type='button']:-moz-focusring,
.c3[type='reset']:-moz-focusring,
.c3[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c3 + button {
  margin-left: 0.375rem;
}

.c2 {
  display: inline-block;
}

.c1 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
  color: rgb(70,70,70);
  -webkit-text-fill-color: currentcolor;
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c1:focus {
  outline: 0;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c1:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c1:active,
.c1:active:hover,
.c1:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c1[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c1:focus {
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
}

.c1:hover {
  background-color: rgb(247,247,247);
  border-color: rgb(216,216,216);
}

.c1:active,
.c1:active:hover,
.c1:active:focus {
  background-color: rgb(230,230,230);
  border-color: rgb(216,216,216);
}

.c0 {
  margin-top: 1.5rem;
  margin-bottom: 2.625rem;
}

<div
    className="c0"
>
    <button
        className="c1 c2 c3"
        href=""
        onClick={undefined}
        type="button"
    >
        Edit
    </button>
</div>,
]
`;
